fixed wrong margin

--- a/src/style.css
+++ b/src/style.css
@@ -146,6 +146,10 @@ h4 {
   color: black;
 }
 
+.credits {
+  margin: 50px 0;
+}
+
 @media (max-width: 500px) {
   .my-name {
     font-size: 48px;
